# gha-self-hosted

./: .gitignore  README.md
.github/workflows/: ci.yml
executor/: Cargo.toml  README.md  local-images-server.py  pyproject.toml  run.py
executor/executor/: github.py  http_server.py  images.py  qemu.py  qmp.py  utils.py
images/ubuntu/: Makefile  README.md  image.pkr.hcl  ubuntu-amd64.json  ubuntu.json
images/ubuntu/cloud-init/: user-data
images/ubuntu/files/: gha-runner-version  gha-runner.service  gha-runner.sh  regenerate-ssh-host-keys.service  regenerate-ssh-host-keys.sh  resize-disk.service  resize-disk.sh  start-gha-runner.py
images/ubuntu/scripts/: disable-timers.sh  finalize.sh  install-awscli.sh  install-gha-runner.sh  install-packages.sh  install-rust.sh  setup-disk-resize.sh  setup-grub.sh  setup-ssh.sh
images/ubuntu/utils/: download-qemu-efi-aarch64.sh
runner/: README.md  environments.json.example  run.py
